[gd_scene load_steps=6 format=3 uid="uid://be156d4gwl6iy"]

[ext_resource type="Script" path="res://shooting_enemy.gd" id="1_f6jcl"]
[ext_resource type="PackedScene" uid="uid://ccdmce3einbpq" path="res://enemy_ai.tscn" id="2_1wxb1"]
[ext_resource type="Script" path="res://Hitbox.gd" id="3_6rney"]

[sub_resource type="SphereMesh" id="SphereMesh_3ekxm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jwex5"]
radius = 14.0

[node name="Shooting_enemy" type="Node2D"]
position = Vector2(489, 262)
script = ExtResource("1_f6jcl")
metadata/_edit_group_ = true

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
modulate = Color(0.909804, 0.0901961, 0.2, 1)
scale = Vector2(25, 24.975)
mesh = SubResource("SphereMesh_3ekxm")

[node name="bullet_pos" type="Node2D" parent="."]
position = Vector2(-12, 0)
rotation = 3.14159

[node name="bullet_pos2" type="Node2D" parent="."]
position = Vector2(0, -12)
rotation = -1.5708

[node name="bullet_pos3" type="Node2D" parent="."]
position = Vector2(12, 0)

[node name="bullet_pos4" type="Node2D" parent="."]
position = Vector2(0, 12)
rotation = 1.5708

[node name="Timer" type="Timer" parent="."]

[node name="enemyAi" parent="." instance=ExtResource("2_1wxb1")]
position = Vector2(0, -10)

[node name="Hitbox" type="Area2D" parent="." node_paths=PackedStringArray("enemy", "enem_ai") groups=["enemy"]]
script = ExtResource("3_6rney")
enemy = NodePath("..")
enem_ai = NodePath("../enemyAi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_jwex5")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
